# fast_api_and_pydantic

./: README.md  books_api_data_validation.py  books_basic.py  pydantic.py  pyproject.toml  test.py
